exam/k8s-product-setup/registry/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  selector:
    matchLabels:
      app: registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
    spec:
      nodeSelector:
        name: master
      containers:
      - image: registry:latest
        name: registry
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
          name: registry
        volumeMounts:
        - name: config
          mountPath: /etc/docker/registry
        - name: volume-registry
          mountPath: /var/lib/registry
        - name: certs
          mountPath: /certs
      volumes:
      - name: config
        configMap:
          defaultMode: 420
          name: registry-config
      - name: volume-registry
        persistentVolumeClaim:
          claimName: pvc-registry
      - name: certs
        hostPath:
          path: /data/certs/registry
