exam/k8s-product-setup/registry/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: test-pod
  name: test-pod
  namespace: default
spec:
  containers:
  - image: nginx:alpine
    name: nginx-pod
    volumeMounts:
    - name: volume-test
      mountPath: /var/log/nginx
  volumes:
  - name: volume-test
    persistentVolumeClaim:
      claimName: pvc-registry
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
