exam/k8s-product-setup/registry/ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-ui
  labels:
    app: registry-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-ui
  template:
    metadata:
      labels:
        app: registry-ui
    spec:
      nodeSelector:
        name: master
      containers:
        - name: registry-ui
          image: "docker.io/joxit/docker-registry-ui:main"
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - name: https
              containerPort: 443
              protocol: TCP
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
          - name: config
            mountPath: /etc/nginx/conf.d
          - name: certs
            mountPath: /etc/nginx/certs
      volumes:
      - name: config
        hostPath:
          path: /data/config/registry
      - name: certs
        hostPath:
          path: /data/certs/registry
