exam/k8s-product-setup/registry/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ui-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
  - hosts:
    - <도메인 주소>
    secretName: <도메인>-registry-com
  rules:
  - host: <도메인 주소>
    http:
      paths:
      - backend:
          service:
            name: registry-ui-svc
            port:
              number: 80
        path: /
        pathType: Prefix
